--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,8 @@
 # Включить mod_rewrite
 RewriteEngine On
 
+# ========== БАЗОВЫЕ РЕДИРЕКТЫ ==========
+
 # Редирект с www на без www
 RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
@@ -9,19 +11,49 @@ RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
-# Редирект с index.php на корень
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.php [NC]
-RewriteRule ^index\.php$ / [R=301,L]
+# Редирект с index.php/index.html на корень
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s/+index\.(php|html|htm) [NC]
+RewriteRule ^index\.(php|html|htm)$ / [R=301,L]
 
-# Удаление .php из URL
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}.php -f
-RewriteRule ^([^/]+)$ $1.php [L]
+# ========== УДАЛЕНИЕ РАСШИРЕНИЙ СТРАНИЦ ==========
 
-# Редирект с .php на без .php
-RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
+# Редирект с расширением на без расширения (только для страниц)
+# Поддержка: .php, .html, .htm
+RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.(php|html|htm) [NC]
 RewriteRule ^ %1 [R=301,L]
 
-# Убрать слеш в конце URL (опционально)
+# Автоматическое добавление расширения при запросе без расширения
+# Приоритет: .php > .html > .htm
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)/$ /$1 [R=301,L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}.php -f
+RewriteRule ^(.+)$ $1.php [L,QSA]
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}.html -f
+RewriteRule ^(.+)$ $1.html [L,QSA]
+
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME}.htm -f
+RewriteRule ^(.+)$ $1.htm [L,QSA]
+
+# ========== ДОПОЛНИТЕЛЬНЫЕ ПРАВИЛА ==========
+
+# Убрать слеш в конце URL (опционально, для страниц без параметров)
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !(.*)/$
+RewriteRule ^(.*)$ $1 [L]
+
+# Защита .htaccess и других служебных файлов
+<Files .htaccess>
+Order allow,deny
+Deny from all
+</Files>
+
+# Защита файлов с конфигурацией
+<FilesMatch "^\.">
+Order allow,deny
+Deny from all
+</FilesMatch>
